prepare for releases, release 0.1.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,12 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
 PROJECT(emlin C)
-
-set(EMLIN_VERSION_MAJOR 0)
-set(EMLIN_VERSION_MINOR 1)
-set(EMLIN_VERSION_PATCH 0)
-set(EMLIN_VERSION ${EMLIN_VERSION_MAJOR}.${EMLIN_VERSION_MINOR}.${EMLIN_VERSION_PATCH})
-
+include(appversion.cmake)
 find_package(emelf REQUIRED)
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/build)
 
-ADD_DEFINITIONS(-Wall -std=c99 -D_XOPEN_SOURCE=700 -O2 -DEMLIN_VERSION="${EMLIN_VERSION}")
+ADD_DEFINITIONS(-Wall -std=c99 -D_XOPEN_SOURCE=700 -O2 -DEMLIN_VERSION="${APP_VERSION}")
 
 ADD_SUBDIRECTORY(src)
 
