--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(${EMELF_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(emlin ${EMELF_LIBRARIES})
 
 install(TARGETS emlin
-	RUNTIME DESTINATION bin
+	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 # vim: tabstop=4
